# MoonBot-Navigation

./: .gitignore  README.md  Screencast from 2025-07-18 16-28-56.webm  rasppi.md  train.txt
ManualSegmentation-4/: README.dataset.txt  README.roboflow.txt  generate_txt_files.py  obj.data  obj.names  test.txt
ManualSegmentation-4/test/: image_100_png.rf.f6df94d6401f37754e0372baffbba3c4.txt  image_108_png.rf.89b46dd6d8262608f15b1f5a8e7f9faa.txt  image_109_png.rf.b2a813ae025324a3a589f2c46c4495d0.txt  image_124_png.rf.2c771a3ab6e3cb7ceef01a8b70355ee0.txt  image_129_png.rf.6730a60b292b1acbe18a29bebea013a2.txt  image_141_png.rf.992d4eb5345b62275298d9e53c463dc3.txt  image_145_png.rf.68604818a109fc7dc6853c89db745de2.txt  image_194_png.rf.e6404990bd334ec8b5feb3e9a65076bc.txt  image_208_png.rf.3c11242162fa7da283868e2c62f8cade.txt  image_220_png.rf.d1270bed2da7ba00eaf85d877308a848.txt  image_274_png.rf.46e0e8e6c56c5b0ff3aae5ae71b6097b.txt  image_326_png.rf.cb723e714ff63a62201c483667ae16f5.txt  image_359_png.rf.5318b6856d15bd724bb223326ec2113f.txt  image_360_png.rf.ef467daff0d0bec9117c4b15d77cc776.txt  image_382_png.rf.f84262a6693317850acb5cc901ba9b45.txt  image_383_png.rf.e11b0439f434c4f78c8d75da7ed7b8ad.txt  image_40_png.rf.aa62425e4c7425614af032587ab4374f.txt  image_418_png.rf.22d192de9ae0a4e9b2a8aa638658c8ad.txt  image_428_png.rf.cb92d5d470f7b8cf26fd65f2f2496234.txt  image_431_png.rf.2ffd7602b127162f0a6c946477eb55f5.txt  image_46_png.rf.dd1918ce8d8f2028ddb2aee766c86302.txt  image_56_png.rf.640fbe6c6e73725191475a416bd3252e.txt  image_64_png.rf.729aaaab6bed741fc646e0736323ac22.txt  image_78_png.rf.f8f869ef430b6c7814e0d44dbc1d6566.txt  image_84_png.rf.52e02524c10661828ed85aea4c482151.txt  image_90_png.rf.382c745a2ce70a77bd152405ac3c4e9b.txt  image_97_png.rf.1f552c8f0169b17e0062eaa2fc30a4e2.txt
ManualSegmentation-4/train/: image_101_png.rf.9309e2b61414512952e8c30a3fd9d421.txt  image_101_png.rf.aa54eeab1579cafd398f206346947b03.txt  image_101_png.rf.ea528b55122b69fb1f301e637c25326d.txt  image_104_png.rf.05e590467b0194bba75b7cb092449686.txt  image_104_png.rf.9b947c3aec309b9c8e6bc074c4204027.txt  image_104_png.rf.b925703696bd5f64cc8d3a0cc45c7d6d.txt  image_105_png.rf.0b904d71f25e6833f135255e91778f57.txt  image_105_png.rf.99e37503c33e97af0fb977d02e9ca167.txt  image_105_png.rf.ce6e9687e89333c700a1e94a1c2ab543.txt  image_106_png.rf.0ca02378007db3ad4205a0c564729d8a.txt  image_106_png.rf.68457f25e69daddc2f215674f7c70670.txt  image_106_png.rf.f2b116339fc7760a0abb32eb7a14de50.txt  image_118_png.rf.6f8bf6b4ae9868851257786f01036550.txt  image_118_png.rf.cbced1d8ea00b6ed2ea4b09f263914b3.txt  image_118_png.rf.e41c40b3bc2e4474c698840187522b69.txt  image_119_png.rf.58591610215f1d1251b0d542288e4b6a.txt  image_119_png.rf.5f688a5d99332cba31b659fdf9edbf47.txt  image_119_png.rf.a5cb937cc17ea4db28b62c9564f7e1a8.txt  image_125_png.rf.1cc7aab45f40c9d070af46c85c686e8a.txt  image_125_png.rf.a251b094339977649ac95826a67c4499.txt  image_125_png.rf.cda9dae9ac3571887f3438768cba3cd1.txt  image_127_png.rf.1521937ba3cfbc93121746ba31899f72.txt  image_127_png.rf.9cd304e45b5b681fe4477b945895c5a9.txt  image_127_png.rf.c749ba4e9e4a3db02b71c47a78524c04.txt  image_128_png.rf.11c4b08075f49a8b1b57db5b3fc9a6ad.txt  image_128_png.rf.3758ebf8f1fe7d89b84c441d4aafffa6.txt  image_128_png.rf.8e97517343be6a064dd8a4565b2b4f45.txt  image_12_png.rf.2fabf9a1111ef44d048c0730a782fab7.txt  image_12_png.rf.c92af1ea684afc350192b3f09e614560.txt  image_12_png.rf.ed9d3fed30bcd5aa20351e908891f4fe.txt  image_131_png.rf.0f975c7096d529c2a51ef2e41c6a32d5.txt  image_131_png.rf.52a8b3865ee6fd76e29e70cabd4171f5.txt  image_131_png.rf.c856d1b13b37213aef476647b136f64b.txt  image_133_png.rf.09aaa4c8ad1b4879f5cfa83e4e0131e4.txt  image_133_png.rf.c8741d5d494ec48a2d16f85058dd6020.txt  image_133_png.rf.ce6f943419b9ba9268cd86c637f03e2f.txt  image_134_png.rf.03814f1952c4f0e974c798536c759cc9.txt  image_134_png.rf.525ff025440c2958cfb0316bf3fc441e.txt  image_134_png.rf.a40c20d3fb15c0348613f803216d2748.txt  image_135_png.rf.0464cc3378350c1411769ee8bc560748.txt  (+260 more)
moonenv/: pyvenv.cfg
src/: autoAnnotate  cameraTest.py  environment.py  hardcoded.py  main.py  objectDetection.py  ssh_listener.py  test.py  test_gripper.py
src/ROS/: README.md
src/ROS/rviz_configs/: diag_multi_robot.rviz  diag_single_robot.rviz  eval_assignment_2.rviz
src/ROS/src/rp_commons/: CMakeLists.txt
src/ROS/src/rp_commons/include/rp_commons/: distance_map.h
src/ROS/src/rp_commons/src/: grid_map.cpp
src/ROS/src/rp_controller/: CMakeLists.txt  package.xml
src/ROS/src/rp_controller/include/rp_controller/: differential_drive_controller.h  node.h
src/ROS/src/rp_controller/src/: diffdrive_controller.cpp  differential_drive_controller.cpp  node.cpp
src/ROS/src/rp_eval/: CMakeLists.txt  package.xml
src/ROS/src/rp_eval/src/: test_controller.cpp  test_controller_ca.cpp
src/ROS/src/rp_localizer/: CMakeLists.txt  package.xml
src/ROS/src/rp_localizer/include/rp_localizer/: localizer.h  node.h
src/ROS/src/rp_localizer/src/: localizer.cpp  localizer_node.cpp  node.cpp
src/ROS/src/rp_map_server/: CMakeLists.txt  package.xml
src/ROS/src/rp_map_server/include/rp_map_server/: node.h
src/ROS/src/rp_map_server/src/: map_server_node.cpp  node.cpp
src/ROS/src/rp_planner/: CMakeLists.txt  package.xml
src/ROS/src/rp_planner/include/rp_planner/: node.h  planner.h  planner_dijkstra.h  planner_dijkstra_v2.hpp
src/ROS/src/rp_planner/src/: node.cpp  planner_dijkstra.cpp  planner_dijkstra_node.cpp  planner_dijkstra_v2.cpp
src/ROS/src/rp_simulator/: CMakeLists.txt
src/ROS/src/rp_simulator/src/: laser_scanner.cpp  unicycle.cpp  world_item.cpp
src/ROS/src/rp_teleop/: CMakeLists.txt  package.xml
src/ROS/src/rp_teleop/src/: teleop_node.cpp
src/config/: yolov3-tiny.cfg
src/environment_map/: environment.py  environment2.py  environment_crater.py
src/image_segmentation_classification/: segment_and_classify.py
src/path_planning/: a_star.py
src/rpi/: send_cmd.sh
src/utils/: add_channel.py  check_num_channels.py
video/: ROS_Simulation.webm
(+3 files in other folders)
